[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poofbg"
version = "0.1.0"
description = "Python SDK for the Poof background removal API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Poof", email = "support@poof.bg" }
]
keywords = [
    "background-removal",
    "image-processing",
    "poof",
    "api",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://poof.bg"
Documentation = "https://docs.poof.bg"
Repository = "https://github.com/poof-bg/py"
Issues = "https://github.com/poof-bg/py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/poof"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
